--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <title>Gambler's Fallacy</title>
+    </head>
     <body>
       Hello there, awesome person!
      </body>
