--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <html>
-    <head>
-        <title>My awesome web page</title>
-    </head>
-
-      Hello there, awesome person!
+     <body>
+      <h1>Hello there, awesome person!</h1>
      </body>
     <head>
         <title>Gambler's Fallacy</title>
