--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
      <body>
       <h1>Hello there, awesome person!</h1>
+      <img src = "https://avatars.githubusercontent.com/u/84117904?v=4">
      </body>
     <head>
         <title>Gambler's Fallacy</title>
